<resources>
    <string name="app_name">MoneyLover</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="register">Register</string>
    <string name="new_to_money_lover">NEW TO MONEY LOVER</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="title">Title</string>
    <string name="unknown_error">error</string>

    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="already_have_account_signup">Already have account?</string>
    <string name="error_sign_up_confirm_password">The confirmed password should be the same as password.</string>
    <string name="transactions">Transactions</string>
    <string name="account">Account</string>
    <string name="plus">+</string>

    <string name="jump_to_day">Jump to day</string>
    <string name="view_by_transaction">View by transaction</string>
    <string name="search_for_transaction">Search for transaction</string>
    <string name="no_transactions">No Transactions</string>
    <string name="add_transaction">Add transaction</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="select_category">Select Category</string>
    <string name="note">Note</string>
    <string name="amount">Amount</string>

    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="back">Back</string>
    <string name="log_out">LOG OUT</string>
    <string name="inflow">Inflow</string>
    <string name="outflow">Outflow</string>

</resources>