<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/imgBtn_Back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="350dp"
        android:background="@drawable/ic_back"
        android:backgroundTint="@color/white" />

    <TextView
        android:id="@+id/tv_SignIn"
        android:layout_width="96dp"
        android:layout_height="46dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="124dp"
        android:layout_marginRight="153dp"
        android:gravity="bottom"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_SignIn"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:background="@color/back_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_email"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:background="@color/back_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btn_SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_password"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:background="@color/green_dark"
        android:padding="10dp"
        android:text="@string/sign_in_button"
        android:textColor="@color/white"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_SignIn"
        android:layout_marginStart="180dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textColor="@color/green_dark"
        android:textSize="14dp" />
</RelativeLayout>