<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SelectCategoryActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarSelectTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_light">

        <Button
            android:id="@+id/btnBackSelect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_back"
            android:textAllCaps="false"
            android:text="@string/back"
            android:textColor="@color/white"
            android:backgroundTint="@color/black_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/select_category"
            android:textColor="@color/white"
            android:textSize="18dp"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/toolbarSelectTransaction">

        <Button
            android:id="@+id/btnExpense"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/expense"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:backgroundTint="@color/selector_category"/>

        <Button
            android:id="@+id/btnIncome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/income"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:backgroundTint="@color/selector_category"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:background="@color/black_light"
        android:id="@+id/recyclerSelectTransaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutButton"/>

</RelativeLayout>