<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAddTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black_light"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvAddTransaction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_transaction"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black_light"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/green_light" />

        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarAddTransaction"
        android:layout_marginTop="50dp"
        android:background="@color/black_light"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="5dp"
                android:minWidth="36dp"
                android:src="@drawable/currency_unit" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/amount"
                android:textColorHint="#CCFFFFFF"
                app:boxBackgroundColor="@color/black_light"
                app:boxStrokeColor="#80939393">

                <EditText
                    android:id="@+id/etAmount"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="number"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="65dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/btnSelectCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivSelectCategory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="8dp"
                android:minWidth="36dp"
                android:src="@drawable/ellipse5" />

            <TextView
                android:id="@+id/tvSelectCategory"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/select_category"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_add_transaction" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="15dp"
                android:src="@drawable/right_arrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="65dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="15dp"
                android:minWidth="36dp"
                android:src="@drawable/list" />

            <EditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/note"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_add_transaction"
                app:boxStrokeColor="#80939393"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="65dp"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/btnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:minWidth="36dp"
                android:src="@drawable/calendar"
                android:padding="15dp"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:padding="15dp"
                tools:text="Sunday, 22 September 2019"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="15dp"
                android:src="@drawable/right_arrow" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>